# WebGPU-AutoLayout

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
frontend/: index.html  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js
frontend/src/: index.js  style.css
src/: main.rs
wgsl-parser/: Cargo.toml
wgsl-parser-demo/: Cargo.toml
wgsl-parser-demo/src/: main.rs
wgsl-parser-wasm/: Cargo.toml
wgsl-parser-wasm/src/: lib.rs
wgsl-parser/src/: lib.rs
