[package]
name = "wgsl-parser-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Elie Michel <elie.michel@exppad.com>"]
description = "WebAssembly binding for wgsl_parser"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
wgsl-parser = { path = "../wgsl-parser" }

[profile.release]
lto = true
