[package]
name = "wgsl-parser-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Elie Michel <elie.michel@exppad.com>"]
description = "WebAssembly binding for wgsl_parser"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["console"] }
wgsl-parser = { path = "../wgsl-parser" }

[profile.release]
lto = true
