[package]
name = "wgsl-parser"
version = "0.1.0"
edition = "2021"
authors = ["Elie Michel <elie.michel@exppad.com>"]
description = "Backend of the WebGPU-Autolayout webapp"
license = "MIT"
repository = "https://github.com/eliemichel/WebGPU-AutoLayout"

[dependencies]
naga = { version = "0.14.0", features  = ["wgsl-in"] }
